# universal-media-mcp

./: .env.example  .gitignore  CLAUDE.md  README.md  README_zh.md  pyproject.toml
src/universal_media_mcp/: __init__.py  async_downloads.py  auth.py  config.py  security.py  server.py
src/universal_media_mcp/downloader/: __init__.py  audio.py  base.py  metadata.py  subtitle.py  video.py
tests/: test_async_downloads.py  test_auth.py  test_downloader_helpers.py  test_security.py
